--- a/src/activity2/testapp/src/app/app.component.html
+++ b/src/activity2/testapp/src/app/app.component.html
@@ -225,8 +225,8 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <h1>Hello, {{ title }}</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
+      <h1>{{ title }}</h1>
+      <p>This application is running properly</p>
       <h3>{{ message }}</h3> 
       
     </div>
